language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_function_call_on_second_step.snap
---
source: language-server/src/tests/action.rs
expression: "fn go() {\n  [1, 2, 3]\n  |> echo\n  |> wibble\n  |> wobble\n}"
---
----- BEFORE ACTION
fn go() {
  [1, 2, 3]
  |> echo
  |> wibble
     ↑     
  |> wobble
}


----- AFTER ACTION
fn go() {
  wibble([1, 2, 3]
  |> echo)
  |> wobble
}
