language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_function_call_on_single_step_pipeline.snap
---
source: language-server/src/tests/action.rs
expression: "fn wibble(wobble: List(Int)) -> Nil {\n  wobble |> echo\n}"
---
----- BEFORE ACTION
fn wibble(wobble: List(Int)) -> Nil {
  wobble |> echo
            ↑   
}


----- AFTER ACTION
fn wibble(wobble: List(Int)) -> Nil {
  echo wobble
}
