language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_function_call_works_when_piping_a_module_select.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble\n\npub fn main() {\n  wibble.wobble |> woo(_)\n}\n\nfn woo(n) { todo }\n"
---
----- BEFORE ACTION

import wibble

pub fn main() {
  wibble.wobble |> woo(_)
                   ↑     
}

fn woo(n) { todo }


----- AFTER ACTION

import wibble

pub fn main() {
  woo(wibble.wobble)
}

fn woo(n) { todo }
