language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_function_call_works_when_piping_an_invalid_module_select.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble.wobble |> woo(_)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble.wobble |> woo(_)
                   ↑     
}


----- AFTER ACTION

pub fn main() {
  woo(wibble.wobble)
}
